feat : implemented celery executor functionality

--- a/4-Executors/Celery-Executor/docker-compose-CeleryExecutor.yml
+++ b/4-Executors/Celery-Executor/docker-compose-CeleryExecutor.yml
@@ -93,3 +93,4 @@ services:
             - POSTGRES_DB=airflow
             - REDIS_PASSWORD=redispass
         command: worker
+        #command: worker -q worker_1,worker_2,worker_3,default
